--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^2.7.14",
     "vue-router": "^3.5.1",
     "vue-session": "^1.0.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
