--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "vue-router": "^3.5.1",
     "vue-session": "^1.0.0",
     "vuex": "^3.6.2",
-    "jwt-decode": "^3.1.2"
+    "jwt-decode": "^3.1.2",
+    "vuex-persistedstate": "^4.1.0"
+
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
