--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jwt-decode": "^3.1.2",
     "vue": "^2.7.14",
     "vue-router": "^3.5.1",
     "vue-session": "^1.0.0",
+    "vue-sweetalert2": "^5.0.5",
     "vuex": "^3.6.2",
-    "jwt-decode": "^3.1.2",
     "vuex-persistedstate": "^4.1.0"
-
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
